argocd/base/traefik-forward-auth/pocket-id-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id-proxy
spec:
  type: ClusterIP
  ports:
    - port: 1411
      targetPort: 1411
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pocket-id-proxy
subsets:
  - addresses:
      - ip: 192.168.1.4
    ports:
      - port: 1411
