argocd/base/traefik-forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - port: 4181
      targetPort: 4181
