argocd/base/traefik-forward-auth/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth-callback
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.streamixs.com`) && PathPrefix(`/_oauth`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: traefik-forward-auth
          port: 4181
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id-proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.streamixs.com`)
      kind: Rule
      services:
        - name: pocket-id-proxy
          port: 1411
  tls: {}
